--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.5'
+    id 'java'
+    id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
-    id 'org.flywaydb.flyway' version '8.0.0'
+    id 'org.flywaydb.flyway' version '9.21.0'
 }
 
-apply plugin: 'java'
+java {
+    sourceCompatibility = '17'
+}
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -16,8 +19,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.flywaydb:flyway-core:8.0.0'
-    implementation 'mysql:mysql-connector-java:8.0.28' //'mysql:mysql-connector-java:8.0.28'
+    implementation 'org.flywaydb:flyway-core:9.21.0'
+    implementation 'org.flywaydb:flyway-mysql:9.21.0'
+    implementation 'mysql:mysql-connector-java:8.0.33'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
