Completed dockerization, created separate profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+# Profiles settings
+spring.profiles.active=local
+
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/demo 
-#spring.datasource.url=jdbc:mysql://my-mysql-db:3306/demo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
