--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3'
+
 services:
   my-mysql-db:
     image: mysql:8.0
     container_name: my-mysql-db
     environment:
-      MYSQL_ROOT_PASSWORD: root  
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: demo
+
   my-spring-app:
     build:
       context: .
@@ -15,3 +17,12 @@ services:
       - "8080:8080"
     depends_on:
       - my-mysql-db
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_DATASOURCE_URL=jdbc:mysql://my-mysql-db:3306/demo
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
+      - SPRING_FLYWAY_ENABLED=true
+      - SPRING_FLYWAY_BASELINE_ON_MIGRATE=true
+      - SPRING_FLYWAY_LOCATIONS=classpath:db/migration
